fixed header title not centered in FF

--- a/css/plae-chef.css
+++ b/css/plae-chef.css
@@ -112,6 +112,7 @@ body.ng-scope {
 
 .tab-lab-header{
     width: 100%;
+    margin-left: 460px !important;
 }
 
 .plae.size {
